CQRS solution - content editing feedback implemented

--- a/docs/howtos/solutions/microservices/common-data/microservices-arch.mdx
+++ b/docs/howtos/solutions/microservices/common-data/microservices-arch.mdx
@@ -1,14 +1,14 @@
 You eventually land on the following architecture:
 
-1. `products service` - handles querying products from the database and returning them to the frontend
-1. `orders service` - handles validating and creating orders
-1. `order history service` - handles querying a customer's order history
-1. `payments service` - handles processing orders for payment
-1. `api gateway` - unifies the services under a single endpoint
-1. `mongodb` - serves as the write-optimized database, storing orders, order history, products, etc.
+1. `products service`: handles querying products from the database and returning them to the frontend
+1. `orders service`: handles validating and creating orders
+1. `order history service`: handles querying a customer's order history
+1. `payments service`: handles processing orders for payment
+1. `api gateway`: unifies the services under a single endpoint
+1. `mongodb`: serves as the write-optimized database for storing orders, order history, products, etc.
 
 :::info
 
-You do not need to use MongoDB as your write-optimized database, you can use other databases such as a SQL database as well.
+You don’t need to use MongoDB as your write-optimized database; you can use other databases such as a SQL database as well. This is just an example.
 
 :::
