--- a/docs/howtos/solutions/microservices/common-data/microservices-ecommerce.mdx
+++ b/docs/howtos/solutions/microservices/common-data/microservices-ecommerce.mdx
@@ -6,10 +6,10 @@ The e-commerce microservices application consists of a frontend, built using [Ne
 
   ![redis microservices e-commerce app frontend products page](images/design-dashboard.png)
 
-- `Shopping Cart`: Add products to the cart, then checkout using the "Buy Now" button.
+- `Shopping Cart`: Add products to the cart, then check out using the "Buy Now" button
   ![redis microservices e-commerce app frontend shopping cart](images/design-cart-2.png)
 
-- `Order history`: Once an order is placed, the `Orders` link in the top navigation bar will show you the order status and history
+- `Order history`: Once an order is placed, the `Orders` link in the top navigation bar shows the order status and history
 
   ![redis microservices e-commerce app frontend order history page](images/design-order-history.png)
 
