Moved Simon Mar 23 to past adds link.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Thursday, March 23      | 3pm UTC      | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Plane Spotting with Redis  - Episode 6][twitch]                                   |
 
   </TabItem>
   <TabItem value="recurring">
@@ -43,6 +42,7 @@ Past events:
 
 |         Date           | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Thursday, March 23     | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Plane Spotting with Redis  - Episode 6][93]                                   |
 | Tuesday, March 14      | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Plane Spotting with Redis  - Episode 5][92]                                   |
 | Friday, March 10       | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Episode 5][91]                                           | 
 | Friday, March 3        | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Episode 4][90]                                           |
@@ -186,6 +186,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[93]: https://www.youtube.com/watch?v=RROQA0QOq0k
 [92]: https://www.youtube.com/watch?v=i8grA5fsbdM
 [91]: https://www.youtube.com/watch?v=4fqqgVpbVtI
 [90]: https://www.youtube.com/watch?v=23wgOHLX68c
