--- a/docs/howtos/solutions/microservices/common-data/microservices-arch-with-redis.mdx
+++ b/docs/howtos/solutions/microservices/common-data/microservices-arch-with-redis.mdx
@@ -1,10 +1,10 @@
 The e-commerce microservices application discussed in the rest of this tutorial uses the following architecture:
 
-1. `products service` - handles querying products from the database and returning them to the frontend
-1. `orders service` - handles validating and creating orders
-1. `order history service` - handles querying a customer's order history
-1. `payments service` - handles processing orders for payment
-1. `digital identity service` - handles storing identity and calculating identity score
-1. `api gateway` - unifies your services under a single endpoint
-1. `mongodb` - serves as the primary database, storing orders, order history, products, etc.
-1. `redis` - serves as the stream processor and caching database
+1. `products service`: handles querying products from the database and returning them to the frontend
+1. `orders service`: handles validating and creating orders
+1. `order history service`: handles querying a customer's order history
+1. `payments service`: handles processing orders for payment
+1. `digital identity service`: handles storing digital identity and calculating identity score
+1. `api gateway`: unifies services under a single endpoint
+1. `mongodb`: serves as the primary database, storing orders, order history, products, etc.
+1. `redis`: serves as the stream processor and caching database
