--- a/docs/howtos/solutions/microservices/interservice-communication/index-interservice-communication.mdx
+++ b/docs/howtos/solutions/microservices/interservice-communication/index-interservice-communication.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-solutions-interservice-communication
-title: Microservices Communication with Redis streams
-sidebar_label: Microservices Communication with Redis streams
+title: Microservices Communication with Redis Streams
+sidebar_label: Microservices Communication with Redis Streams
 slug: /howtos/solutions/microservices/interservice-communication
 authors: [prasan, will]
 ---
@@ -16,51 +16,50 @@ import RedisEnterprise from '../common-data/redis-enterprise.mdx';
 
 <SourceCode />
 
-## What is Interservice Communication?
+## What is interservice communication?
 
-When building a microservices application, people use a variety of options for communication between services, such as:
+When building a microservices application, people use a variety of options for communication between services. Among them:
 
-1. **Publish/Subscribe** model: In the pub/sub (fire and forget) model, a publisher produces messages and subscribers that are _active at the time_ consume those messages. Inactive subscribers cannot receive the messages at a later point in time.
-1. **Streaming** : Most microservices applications use an event streaming solution because of:
-   - **Message persistence** : Unlike the pub/sub model, messages stored in streams are able to be read by multiple consumers (fan out) at any time. So consumers can always read messages at a later point of time even if they were not active when the message was originally appended to the stream.
-   - **Inherent replayability** : Even if a subscriber crashes during the message processing, it can re-read the exact same unacknowledged message from stream. Say the crashed subscriber never comes back online, then the consumer group feature allows consumers to process unacknowledged messages of other consumers after a specified time.
-   - **Separation of concerns** : Producers can produce messages to stream at **high speed** separately and consumers can process messages at their own speed separately. This separation of concerns solves both the "fast producer -> slow consumer" and "slow producer -> fast consumer" problem, allowing the scaling of those services independently.
+1. **Publish/Subscribe** model: In the pub/sub model (fire and forget), a publisher produces messages, and subscribers that are _active at the time_ consume those messages. Inactive subscribers cannot receive the messages at a later point in time.
+1. **Streaming**: Most microservices applications use an event-streaming solution because of:
+   - **Message persistence**: Unlike the pub/sub model, messages stored in streams can be read by multiple consumers at any time; they fan out. So consumers can read messages at a later point in time, even if they were not active when the message was originally appended to the stream.
+   - **Inherent replayability**: Even if a subscriber crashes during the message processing, it can re-read the exact same unacknowledged message from the stream. For example, say the crashed subscriber never comes back online; the consumer group feature allows consumers to process unacknowledged messages of other consumers after a specified time.
+   - **Separation of concerns**: Producers can produce messages to stream at **high speed** separately and consumers can process messages at their own speed separately. This separation of concerns solves both the "fast producer -> slow consumer" and "slow producer -> fast consumer" problem, allowing for the scaling of those services independently.
 
-In an event-driven microservices architecture you might have some services that publish an API, and other services that are simply producers and consumers of events with no external API.
+In an event-driven microservices architecture, you might have some services that publish an API, and other services that are simply producers and consumers of events with no external API.
 
-## Why You Should Use Redis for Interservice Communication
+## Why you should use Redis for interservice communication
 
-Consider the following scenario.
+Consider the following scenario: You have an e-commerce application with an architecture that is broken down into different microservices including as `create an order`, `create an invoice`, `process a payment`, `fulfill and order`, and so on. Microservices allow you to separate these commands into different services to scale independently, enabling more customers to get their orders processed quickly and simultaneously, which results in a better user experience, higher sales volume, and less-cranky customer service staff.
 
-You have an e-commerce application which is broken down into different microservices like `create an order`, `create an invoice`, `process a payment`, `fulfill and order`, etc. Microservices will allow separating these commands into different services to scale independently, allowing more customers to process their orders quickly and simultaneously resulting in a better user experience and higher sales volume.
+When you use microservices, you need a tool for interservice communication. Initially, you might consider using a product like **Kafka** for streaming, but setting it up is rather complicated. What many people don't know about Redis is that it supports streams in the same way Kafka does. Given that you are likely already using Redis for caching, it makes sense to also use it for stream processing. To reduce the complexity of application architecture and maintenance, **Redis** is a great option for interservice communication. Here we break down the process of using Redis with streams for interservice communication.
 
-When using microservices, you obviously need some way of communication between them. You might initially consider using a product like **Kafka** for streaming, but the setup for it is rather complicated. What many people don't know about Redis is that it supports streams similar to Kafka. Given that you are likely to use Redis for caching already, it makes sense to also use it for stream processing. To reduce complexity of application architecture and maintenance, **Redis** is a great option for interservice communication. Keep reading for a breakdown of how to use Redis with streams for interservice communication.
-
-## Microservices Architecture for an E-commerce Application
+## Microservices architecture for an e-commerce application
 
 <MicroservicesArchitectureWithRedis />
 
-The diagram below illustrates how Redis Streams is used as the message broker between the `orders service` and the `payments service`.
+This diagram illustrates how Redis Streams is used as the message broker between the `orders service` and the `payments service`:
 
 ![Microservices interservice communication with Redis streams message broker](images/interservice-communication-redis-streams.png)
 
 :::tip
 
-Redis Streams offers simplicity in both development and operations, especially when using Redis for other purposes such as caching. With sub-millisecond latency and a lightweight Streams log data structure that is easier to deploy, develop, and operate and is also more cost-effective than using Kafka or other similar technologies.
-
+Redis Streams is more cost-effective than using Kafka or other similar technologies.
+With sub-millisecond latency and a lightweight Streams log data structure, Redis is easier to deploy, develop, and operate.
 :::
 
-## Using Redis for Interservice Communication in an Event-driven Architecture
+## Using Redis for interservice communication in an event-driven architecture
 
-Below is an event flow diagram that outlines how the `orders service` and `payments service` communicate through Redis with streams.
+The following event flow diagram illustrates how the `orders service` and `payments service` communicate through Redis with streams:
 
 ![Microservices streaming with Redis event flow diagram](images/interservice-communication-event-flow-diagram.png)
 
 Let's outline the streams and events used below:
 
-1. The `orders service` inserts order data into the database
+1. The `orders service` inserts order data into the database.
 
    ```json
+   //sample order data
    {
      "orderId": "01GTP3K2TZQQCQ0T2G43DSSMTD",
      "products": [
@@ -103,13 +102,14 @@ Let's outline the streams and events used below:
    }
    ```
 
-2. The `orders service` also appends minimal data (orderId, orderAmount & userId) to the `ORDERS_STREAM` to signal new order creation (i.e. it acts as `PRODUCER` of the `ORDERS_STREAM`)
+2. The `orders service` also appends minimal data (orderId, orderAmount, and userId) to the `ORDERS_STREAM` to signal new order creation (i.e., it acts as `PRODUCER` of the `ORDERS_STREAM`).
 
    ![orders-stream](./images/02-orders-stream.png)
 
-3. The `payments service` listens to the `ORDERS_STREAM` and processes payments for new orders, then inserts payment data into the database (i.e it acts as the `CONSUMER` of the `ORDERS_STREAM`)
+3. The `payments service` listens to the `ORDERS_STREAM` and processes payments for new orders, then inserts payment data into the database (i.e, it acts as the `CONSUMER` of the `ORDERS_STREAM`).
 
    ```json
+   //sample payment data
    {
      "paymentId": "6403212956a976300afbaac1",
      "orderId": "01GTP3K2TZQQCQ0T2G43DSSMTD",
@@ -127,10 +127,10 @@ Let's outline the streams and events used below:
    }
    ```
 
-4. The `payments service` appends minimal data (orderId,paymentId, orderStatusCode & userId) to the `PAYMENTS_STREAM` to signal a new payment (i.e. it acts as the `PRODUCER` of the `PAYMENTS_STREAM`)
+4. The `payments service` appends minimal data (orderId, paymentId, orderStatusCode, and userId) to the `PAYMENTS_STREAM` to signal a new payment (i.e., it acts as the `PRODUCER` of the `PAYMENTS_STREAM`).
    ![payments-stream](./images/04-payments-stream.png)
 
-5. The `orders service` listens to the `PAYMENTS_STREAM` and updates the orderStatus and paymentId for orders in the database accordingly as the order payment is fulfilled (i.e. it acts as the `CONSUMER` of the `PAYMENTS_STREAM`)
+5. The `orders service` listens to the `PAYMENTS_STREAM` and updates the orderStatus and paymentId for orders in the database accordingly as the order payment is fulfilled (i.e., it acts as the `CONSUMER` of the `PAYMENTS_STREAM`).
 
 ```json
 {
@@ -142,22 +142,22 @@ Let's outline the streams and events used below:
 }
 ```
 
-## E-commerce Application Frontend using Next.js and Tailwind
+## E-commerce application frontend using Next.js and Tailwind
 
 <MicroservicesEcommerceDesign />
 
-## Building an Interservice Communication Application with Redis and MongoDB
+## Building an interservice communication application with Redis and MongoDB
 
-We're using Redis to broker the events sent between the `orders service` and the `payments service`.
+We use Redis to broker the events sent between the `orders service` and the `payments service`.
 
-### Producer 1 (Orders Service)
+### Producer 1 (orders service)
 
-Let's look at some of the code in the orders service to understand how it works.
+Let's look at some of the code in the orders service to understand how it works:
 
-1. Orders are created
-2. After order creation, the `orders service` appends minimal data to the `ORDERS_STREAM` to signal new order creation
+1. Orders are created.
+2. After order creation, the `orders service` appends minimal data to the `ORDERS_STREAM` to signal new order creation.
 
-```typescript
+```typescript title="server/src/services/orders/src/service-impl.ts"
 const addOrderIdToStream = async (
   orderId: string,
   orderAmount: number,
@@ -178,11 +178,11 @@ const addOrderIdToStream = async (
 };
 ```
 
-### Consumer 1 (Payments Service)
+### Consumer 1 (payments service)
 
-3. The `payments service` is listening to the `ORDERS_STREAM`
+3. The `payments service` listens to the `ORDERS_STREAM`
 
-```typescript
+```typescript title="server/src/services/payments/src/service-impl.ts"
 // Below is some code for how you would use Redis to listen for the stream events:
 
 async function listenToStream(
@@ -263,15 +263,15 @@ There are a few important things to note here:
 
 1. Make sure the stream group doesn't exist prior to creating it.
 1. Use `isolated: true,` in order to use the blocking version of `XREADGROUP` in [isolated execution](https://github.com/redis/node-redis/blob/master/docs/isolated-execution.md) mode.
-1. Acknowledge individual messages after they have been processed to remove them from the pending orders queue and avoid processing them more than once.
+1. Acknowledge individual messages after you process them to remove the messages from the pending orders queue and to avoid processing them more than once.
 
 :::
 
-### Producer 2 (Payments Service)
+### Producer 2 (payments service)
 
 4. The `payments service` appends minimal data to `PAYMENTS_STREAM` to signal that a payment has been fulfilled.
 
-```typescript
+```typescript title="server/src/services/payments/src/service-impl.ts"
 const addPaymentIdToStream = async (
   orderId: string,
   paymentId: string,
@@ -294,11 +294,11 @@ const addPaymentIdToStream = async (
 };
 ```
 
-### Consumer 2 (Orders Service)
+### Consumer 2 (orders service)
 
 5. The `orders service` listens to the `PAYMENTS_STREAM` and updates the order when payments are fulfilled.
 
-```typescript
+```typescript title="server/src/services/orders/src/service-impl.ts"
 //Below is some code for how you would use Redis to listen for the stream events:
 
 async function listenToStream(
@@ -375,26 +375,26 @@ const updateOrderStatus: IMessageHandler = async (message, messageId) => {
 
 :::tip
 
-It's best practice to validate all incoming messages to make sure you can work with them.
+It's a best practice to validate all incoming messages to make sure you can work with them.
 
 :::
 
-For the purposes of our application we are making a call to update the order status in Redis and MongoDB. Another common pattern is to have your services write to one database, and then separately use a CDC mechanism to update the other database. For example, you could write directly to Redis, then use **RedisGears** to handle synchronizing Redis and MongoDB in the background. For the purposes of this tutorial we are not going to outline exactly how you might handle synchronization, but instead focus on how the data is stored and accessed in Redis.
+For the purposes of our application, we make a call to update the order status in both Redis and MongoDB in the same service (For simplicity, we are not using any synchronization technique between databases rather focusing on how the data is stored and accessed in Redis). Another common pattern is to have your services write to one database, and then separately use a CDC mechanism to update the other database. For example, you could write directly to Redis, then use **RedisGears** to handle synchronizing Redis and MongoDB in the background.
 
 :::tip
 
-If you're using **Redis Enterprise**, you will find that Redis Streams is available on the same multi-tenant data platform you are already using for caching. It also has high availability, message persistence, support for multiple clients, and resiliency with primary/secondary data replication built-in.
+If you use **Redis Enterprise**, you will find that Redis Streams is available on the same multi-tenant data platform you already use for caching. Redis Enterprise also has high availability, message persistence, support for multiple clients, and resiliency with primary/secondary data replication… all built in.
 
 :::
 
-## Conclusion
+## Ready to use Redis for streaming?
 
-That's all there is to it! You've now seen how to use Redis for streaming as both a producer and a consumer. Hopefully you can draw some inspiration from this tutorial and apply it to your own event streaming application. See below for some additional resources around this topic.
+That's all there is to it! You now know how to use Redis for streaming as both a producer and a consumer. Hopefully, you can draw some inspiration from this tutorial and apply it to your own event streaming application. For more on this topic, check out the additional resources below:
 
-### Additional Resources
+### Additional resources
 
 - Explore streams in detail in the [Redis University course on Redis Streams](https://university.redis.com/courses/ru202/)
-- Check out our e-book on [Understanding Streams in Redis and Kafka – A Visual Guide](https://redis.com/docs/understanding-streams-in-redis-and-kafka-a-visual-guide/)
+- Check out our e-book on [Understanding Streams in Redis and Kafka: A Visual Guide](https://redis.com/docs/understanding-streams-in-redis-and-kafka-a-visual-guide/)
 - [CQRS](/howtos/solutions/microservices/cqrs)
 - [Query caching](/howtos/solutions/microservices/caching)
 - [API gateway caching](/howtos/solutions/microservices/api-gateway-caching)
