--- a/docs/howtos/solutions/microservices/caching/index-caching.mdx
+++ b/docs/howtos/solutions/microservices/caching/index-caching.mdx
@@ -19,30 +19,31 @@ import cacheHitImage from './images/redis-cache-aside-cache-hit.png';
 
 <SourceCode />
 
-## What is Query Caching?
+## What is query caching?
 
-Have you ever been in a situation where your database queries are slowing down, and you need to speed them up while keeping costs down? Imagine that you've built an e-commerce application that started small and is growing fast.
+Have you ever been in a situation where your database queries are slowing down?
+Query caching is the technique you need to speed database queries by using different caching methods while keeping costs down! Imagine that you built an e-commerce application. It started small but is growing fast. By now, you have an extensive product catalog and millions of customers.
 
-You're at the point where you have an extensive product catalog and millions of customers. Your queries to MongoDB are beginning to slow down, and you've already attempted to optimize them. Even though you were able to squeak out a little extra performance, it wasn't enough to satisfy your customers.
+That’s good for business, but a hardship for technology. Your queries to MongoDB are beginning to slow down, even though you already attempted to optimize them. Even though you can squeak out a little extra performance, it isn’t enough to satisfy your customers.
 
-## Why You Should Use Redis for Query Caching
+## Why you should use Redis for query caching
 
-Redis is an in-memory datastore, making it perfect for caching. It allows you to reduce the load on your primary database while speeding up database reads.
+Redis is an in-memory datastore, best known for caching. Redis allows you to reduce the load on a primary database while speeding up database reads.
 
-For example, in an e-commerce application you might be able to guess what query is requested most often... If you guessed the query for searching products you would be correct!
+With any e-commerce application, there is one specific type of query that is most often requested. If you guessed that it’s the product search query, you’re correct!
 
-To improve product search in ecommerce app, we can implement one of following caching patterns
+To improve product search in an e-commerce application, you can implement one of following caching patterns:
 
-- **Cache prefetching**: An entire product catalog can be pre-cached in Redis and the application can perform any product query on Redis similar to the primary database
-- **Cache-aside** pattern: Redis is filled on-demand based on whatever search parameters are requested by the frontend.
+- **Cache prefetching**: An entire product catalog can be pre-cached in Redis, and the application can perform any product query on Redis similar to the primary database.
+- **Cache-aside** pattern: Redis is filled on demand, based on whatever search parameters are requested by the frontend.
 
 :::tip
 
-If you're using **Redis Enterprise** cache prefetching is made easier with support for JSON and search. You also get additional features such as real-time performance, infinite scalability, resiliency and fault tolerance, and high-availability features such as Active-Active geo-redundancy.
+If you use **Redis Enterprise**, cache prefetching is easier due to its support for JSON and search. You also get additional features such as real-time performance, High scalability, resiliency, and fault tolerance. You can also call upon high-availability features such as Active-Active geo-redundancy.
 
 :::
 
-This tutorial focuses on the **cache-aside** pattern. The goal of this design pattern is to set up **optimal** caching (load as you go) for better read operations. With caching, you might be familiar with "cache miss," where you do not find data in the cache, and a "cache hit," where you are able to find data in the cache. Let's look at how the cache aside pattern works with Redis for both a "cache miss" and a "cache hit."
+This tutorial focuses on the **cache-aside** pattern. The goal of this design pattern is to set up **optimal** caching (load-as-you-go) for better read operations. With caching, you might be familiar with a "cache miss," where you do not find data in the cache, and a "cache hit," where you can find data in the cache. Let's look at how the cache-aside pattern works with Redis for both a "cache miss" and a "cache hit."
 
 ### Cache-aside with Redis (cache miss)
 
@@ -53,17 +54,17 @@ This tutorial focuses on the **cache-aside** pattern. The goal of this design pa
   className="margin-bottom--md"
 />
 
-The image above depicts the steps taken in the cache-aside pattern when there is a "cache miss." To understand how this functions, consider the following process:
+This diagram illustrates the steps taken in the cache-aside pattern when there is a "cache miss." To understand how this works, consider the following process:
 
-1. An application requests data from the backend
-1. The backend checks to find out if the data is available in Redis
-1. Data is not found (a cache miss), so the data is fetched from the database
-1. The data returned from the database is subsequently stored in Redis
-1. The data is then returned to the application
+1. An application requests data from the backend.
+1. The backend checks to find out if the data is available in Redis.
+1. Data is not found (a cache miss), so the data is fetched from the database.
+1. The data returned from the database is subsequently stored in Redis.
+1. The data is then returned to the application.
 
 ### Cache-aside with Redis (cache hit)
 
-Now that you have seen what a "cache miss" looks like, let's cover a "cache hit." Below is the same diagram, with the "cache hit" steps highlighted in green.
+Now that you have seen what a "cache miss" looks like, let's cover a "cache hit." Here is the same diagram, but with the "cache hit" steps highlighted in green.
 
 <img
   src={cacheHitImage}
@@ -72,44 +73,44 @@ Now that you have seen what a "cache miss" looks like, let's cover a "cache hit.
   className="margin-bottom--md"
 />
 
-1. An application requests data from the backend
-1. The backend checks to find out if the data is available in Redis
-1. The data is then returned to the application
+1. An application requests data from the backend.
+1. The backend checks to find out if the data is available in Redis.
+1. The data is then returned to the application.
 
 The cache-aside pattern is useful when you need to:
 
-1. **Query data frequently** - When you have a large volume of reads (as is the case in an e-commerce app), the cache-aside pattern will give you an immediate performance gain for subsequent data requests.
-1. **Fill the cache on-demand** - The cache-aside pattern will fill the cache as data is requested rather than pre-caching, thus saving on space and cost. Useful when it isn't clear what data will need to be cached.
-1. **Be cost conscious** - Since cache size is directly related to the cost of cache storage in the cloud, the smaller the size, the less you pay.
+1. **Query data frequently**: When you have a large volume of reads (as is the case in an e-commerce application), the cache-aside pattern gives you an immediate performance gain for subsequent data requests.
+1. **Fill the cache on demand**: The cache-aside pattern fills the cache as data is requested rather than pre-caching, thus saving on space and cost. This is useful when it isn't clear what data will need to be cached.
+1. **Be cost-conscious**: Since cache size is directly related to the cost of cache storage in the cloud, the smaller the size, the less you pay.
 
 :::tip
 
-If you're using **Redis Enterprise** and a database that uses a JDBC driver, you can take advantage of [**Redis Smart Cache**](https://github.com/redis-field-engineering/redis-smart-cache), which let's you add caching to your application without changing the code. [**Click here to learn more!**](https://github.com/redis-field-engineering/redis-smart-cache)
+If you use **Redis Enterprise** and a database that uses a JDBC driver, you can take advantage of [**Redis Smart Cache**](https://github.com/redis-field-engineering/redis-smart-cache), which lets you add caching to an application without changing the code. [**Click here to learn more!**](https://github.com/redis-field-engineering/redis-smart-cache)
 
 :::
 
-## Microservices Architecture for an E-commerce Application
+## Microservices architecture for an e-commerce application
 
 <MicroservicesArchitectureWithRedis />
 
-## E-commerce Application Frontend using Next.js and Tailwind
+## E-commerce application frontend using Next.js and Tailwind
 
 <MicroservicesEcommerceDesign />
 
-## Caching in a Microservices Application with Redis and MongoDB
+## Caching in a microservices application with Redis and MongoDB
 
-In our sample application, the products service publishes an API for filtering products. Here is what a call to the API looks like:
+In our sample application, the products service publishes an API for filtering products. Here's what a call to the API looks like:
 
-### Get Products by Filter Request
+### Get products by filter request
 
-```json
+```json title="docs/api/get-products-by-filter.md"
 // POST http://localhost:3000/products/getProductsByFilter
 {
   "productDisplayName": "puma"
 }
 ```
 
-### Get Products by Filter Response (Cache Miss)
+### Get products by filter response (cache miss)
 
 ```json {30}
 {
@@ -145,7 +146,7 @@ In our sample application, the products service publishes an API for filtering p
 }
 ```
 
-### Get Products by Filter Response (Cache Hit)
+### Get products by filter response (cache hit)
 
 ```json {6}
 {
@@ -157,11 +158,11 @@ In our sample application, the products service publishes an API for filtering p
 }
 ```
 
-### Implementing Cache-aside with Redis and MongoDB
+### Implementing cache-aside with Redis and MongoDB
 
-Below you will find the function used to search for products in MongoDB.
+The following code shows the function used to search for products in MongoDB:
 
-```typescript
+```typescript title="server/src/services/products/src/service-impl.ts"
 async function getProductsByFilter(productFilter: IProductFilter) {
   const mongo = getMongodb();
   const filter: Document = {
@@ -214,20 +215,22 @@ async function getProductsByFilter(productFilter: IProductFilter) {
 }
 ```
 
-If you're familiar with MongoDB, the code above should be pretty straightforward. We simply make a call to MongoDB to find products based on a filter on the `displayName` property of the product. We also define a projection object to specify which properties to get out of MongoDB. You can set up multiple columns for better fuzzy searching, but for the purposes of this tutorial it is simplified.
+If you're familiar with MongoDB, this code should be pretty straightforward. You simply make a call to MongoDB to find products based on a filter on the product’s `displayName` property. You also define a projection object to specify which properties to get out of MongoDB. You can set up multiple columns for better fuzzy searching, but we simplified it for the purposes of this tutorial.
 
-Now, using MongoDB directly without Redis will work for a while, and eventually start to slow down. That's why Redis is brought in to speed things up. The cache-aside pattern was chosen in order to balance performance with cost. The basic decision tree for cache-aside is as follows.
+Using MongoDB directly without Redis works for a while, but eventually it slows down. That's why you might use Redis, to speed things up. The cache-aside pattern helps you balance performance with cost.
+
+The basic decision tree for cache-aside is as follows.
 
 When the frontend requests products:
 
-1. Form a hash with the contents of the request (i.e. the search parameters)
-1. Check Redis to see if a value exists for the hash
-1. Is there a cache hit? If data is found for the hash it is returned; the process stops here.
+1. Form a hash with the contents of the request (i.e., the search parameters).
+1. Check Redis to see if a value exists for the hash.
+1. Is there a cache hit? If data is found for the hash, it is returned; the process stops here.
 1. Is there a cache miss? When data is not found, it is read out of MongoDB and subsequently stored in Redis prior to being returned.
 
-Below you will find the code used to implement the decision tree.
+Here’s the code used to implement the decision tree:
 
-```typescript
+```typescript title="server/src/services/products/src/routes.ts"
 const getHashKey = (_filter: Document) => {
   let retKey = '';
   if (_filter) {
@@ -270,15 +273,15 @@ router.post(API.GET_PRODUCTS_BY_FILTER, async (req: Request, res: Response) => {
 
 :::tip
 
-You will need to decide what expiry or time to live (TTL) works best for your particular use-case.
+You need to decide what expiry or time to live (TTL) works best for your particular use case.
 
 :::
 
-## Conclusion
+## Ready to use Redis for query caching?
 
-That's all there is to it! You've now seen how to use Redis for caching with one of the most common caching patterns (cache-aside). It's possible to incrementally adopt Redis wherever needed with different strategies/ patterns. See below for some additional resources around microservices topic.
+You now know how to use Redis for caching with one of the most common caching patterns (cache-aside). It's possible to incrementally adopt Redis wherever needed with different strategies/patterns. For more resources on the topic of microservices, check out the links below:
 
-### Additional Resources
+### Additional resources
 
 - [CQRS](/howtos/solutions/microservices/cqrs)
 - [Interservice communication](/howtos/solutions/microservices/interservice-communication)
