--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -43,6 +43,7 @@ Past events:
 
 |         Date           | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Friday, March 24       | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Episode 6][94]                                           | 
 | Thursday, March 23     | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Plane Spotting with Redis  - Episode 6][93]                                   |
 | Tuesday, March 14      | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Plane Spotting with Redis  - Episode 5][92]                                   |
 | Friday, March 10       | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Episode 5][91]                                           | 
@@ -187,6 +188,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[94]: https://www.youtube.com/watch?v=uo91t1bMOcg
 [93]: https://www.youtube.com/watch?v=RROQA0QOq0k
 [92]: https://www.youtube.com/watch?v=i8grA5fsbdM
 [91]: https://www.youtube.com/watch?v=4fqqgVpbVtI
